--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <li><a href="#">PORTFOLIO</a></li>
 
-      <li><a href="#">GALLERY></a></li>
+      <li><a href="#">GALLERY</a></li>
 
       <li><a href="#">HELP & FAQ</a></li>
 
@@ -157,6 +157,22 @@
 </div>
   </div>
 
+  <div id="googleMap" style="width:100%;height:400px;"></div>
+
+<script>
+function myMap() {
+var mapProp= {
+    center:new google.maps.LatLng(25.9470945,-80.1484152),
+    zoom:15,
+};
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+
+</script>
+
+
+     <!--     Footer     -->
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -164,6 +180,7 @@
     <script src="distr/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
     <script src="src/js/star.js"></script>
     <script src="distr/owl.carousel/dist/owl.carousel.min.js"></script>
+
     <script type="text/javascript">
 $('.owl-carousel').owlCarousel({
         items:4,
@@ -175,5 +192,7 @@ $('.owl-carousel').owlCarousel({
         startPosition: 'URLHash'
     });
 </script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGleK7X7vHnwyCI2H9QUuM5ybTgJ5d2bg&callback=myMap"></script>
+<script src="dist/js/main.js"></script>
   </body>
   </html>
