--- a/index.html
+++ b/index.html
@@ -173,6 +173,63 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
      <!--     Footer     -->
 
+<div class="main-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-2 col-sm-4"><div class="footer-column">
+        <nav class="footer-menu">
+          <ul>
+            <li class="active"><a href="#">Shop</a></li>
+            <li><a href="#"></a>Browse By Holidays</li>
+            <li><a href="#"></a>Browse By Brand</li>
+            <li><a href="#"></a>Gift of the Month Clubs</li>
+            <li><a href="#"></a>Customized Bottles</li>
+            <li><a href="#"></a>Corporate Gifts</li>
+
+          </ul>
+        </nav>
+      </div></div>
+
+      <div class="col-lg-2 col-sm-4"><div class="footer-column">
+        <nav class="footer-menu">
+          <ul>
+            <li class="active"><a href="#">About</a></li>
+            <li><a href="#"></a>About Spririted Gifts</li>
+            <li><a href="#"></a>Read our Blog</li>
+            <li><a href="#"></a>About our Selection</li>
+            <li><a href="#"></a>Read our Reviews</li>
+            <li><a href="#"></a>Shipping & Returns</li>
+
+          </ul>
+        </nav>
+      </div></div>
+      <div class="col-lg-2 col-sm-4"><div class="footer-column">
+        <nav class="footer-menu">
+          <ul>
+            <li class="active"><a href="#">More</a></li>
+            <li><a href="#"></a>Privacy Policy</li>
+            <li><a href="#"></a>Retailer Network</li>
+            <li><a href="#"></a>Help and FAQs</li>
+            <li><a href="#"></a>Scholarship</li>
+            <li><a href="#"></a>Contsct US</li>
+
+          </ul>
+        </nav>
+      </div></div>
+      <div class="col-lg-2"><div class="footer-column">
+        <nav class="footer-menu">
+          <ul>
+            <li class="active"><a href="#">More</a></li>
+          </ul>
+        </nav>
+          <div class="col-lg-2"><div class="footer-column"><i class="fa fa-facebook-square" aria-hidden="true"></i></div></div>
+      </div></div>
+
+    </div>
+  </div>
+</div>
+
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
