--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
    <button class="btn btn-danger" type="button">DANGER</button>
  </div>
 </div>
-</div>
+
 
 <!--     inputs     -->
 
@@ -118,7 +118,7 @@
     </div>
     <div class="col-lg-3"></div>
       </div>
-
+  </div>
       <!--     Star rating     -->
 
   <div class="margin"></div>
@@ -176,53 +176,56 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 <div class="main-footer">
   <div class="container">
     <div class="row">
-      <div class="col-lg-2 col-sm-4"><div class="footer-column">
+      <div class="col-lg-2 col-lg-push-9 col-lg-offset-1 col-md-12 col-md-offset-5"><div class="footer-column">
+          <ul>
+            <li class="active"><a href="#"><span>Follow us</span></a></li>
+          </ul>
+            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-pinterest-square fa-2x" aria-hidden="true"></i>
+          </div></div>
+            <div class="col-lg-2 col-lg-pull-3 col-lg-offset-1 col-sm-4"><div class="footer-column">
         <nav class="footer-menu">
           <ul>
-            <li class="active"><a href="#">Shop</a></li>
-            <li><a href="#"></a>Browse By Holidays</li>
-            <li><a href="#"></a>Browse By Brand</li>
-            <li><a href="#"></a>Gift of the Month Clubs</li>
-            <li><a href="#"></a>Customized Bottles</li>
-            <li><a href="#"></a>Corporate Gifts</li>
+            <li class="active"><a href="#"><span>Shop</span></a></li>
+            <li><a href="#"></a><span>Browse By Holidays</span></li>
+            <li><a href="#"  ></a>spanBrowse By Brand</span></li>
+            <li><a href="#"  ></a>spanGift of the Month Clubs</span></li>
+            <li><a href="#"  ></a>spanCustomized Bottles</span></li>
+            <li><a href="#"  ></a>spanCorporate Gifts</span></li>
+
+          </ul>
+        </nav>
+      </div></div>
+      <div class="col-lg-2 col-lg-pull-3 col-lg-offset-1 col-sm-4"><div class="footer-column">
+        <nav class="footer-menu">
+          <ul>
+            <li class="active"><a href="#"><span>About</span></a></li>
+            <li><a href="#"></a><span>About Spririted Gifts</span></li>
+            <li><a href="#"></a><span>Read our Blog</span></li>
+            <li><a href="#"></a><span>About our Selection</span></li>
+            <li><a href="#"></a><span>Read our Reviews</span></li>
+            <li><a href="#"></a><span>Shipping & Returns</span></li>
+
+          </ul>
+        </nav>
+      </div></div>
+      <div class="col-lg-2 col-lg-pull-3 col-lg-offset-1 col-sm-4"><div class="footer-column">
+        <nav class="footer-menu">
+          <ul>
+            <li class="active"><a href="#"><span>More</span></a></li>
+            <li><a href="###"></a><span>Privacy Policy</span></li>
+            <li><a href="#"></a><span>Retailer Network</span></li>
+            <li><a href="#"></a><span>Help and FAQs</span></li>
+            <li><a href="#"></a><span>Scholarship</span></li>
+            <li><a href="#"></a><span>Contsct US</span></li>
 
           </ul>
         </nav>
       </div></div>
 
-      <div class="col-lg-2 col-sm-4"><div class="footer-column">
-        <nav class="footer-menu">
-          <ul>
-            <li class="active"><a href="#">About</a></li>
-            <li><a href="#"></a>About Spririted Gifts</li>
-            <li><a href="#"></a>Read our Blog</li>
-            <li><a href="#"></a>About our Selection</li>
-            <li><a href="#"></a>Read our Reviews</li>
-            <li><a href="#"></a>Shipping & Returns</li>
 
-          </ul>
-        </nav>
-      </div></div>
-      <div class="col-lg-2 col-sm-4"><div class="footer-column">
-        <nav class="footer-menu">
-          <ul>
-            <li class="active"><a href="#">More</a></li>
-            <li><a href="#"></a>Privacy Policy</li>
-            <li><a href="#"></a>Retailer Network</li>
-            <li><a href="#"></a>Help and FAQs</li>
-            <li><a href="#"></a>Scholarship</li>
-            <li><a href="#"></a>Contsct US</li>
-
-          </ul>
-        </nav>
-      </div></div>
-      <div class="col-lg-2"><div class="footer-column">
-        <nav class="footer-menu">
-          <ul>
-            <li class="active"><a href="#">More</a></li>
-          </ul>
-        </nav>
-          <div class="col-lg-2"><div class="footer-column"><i class="fa fa-facebook-square" aria-hidden="true"></i></div></div>
       </div></div>
 
     </div>
