--- a/index.html
+++ b/index.html
@@ -18,25 +18,28 @@
   <!--     header_line      -->
 
   <div class="container header_line">
-    <div class="row">
+    <div class="row logo_line">
       <div class="col-lg-3">
         <img src="dist/img/logo.png" alt="logo">
       </div>
       <div class="col-lg-3">
       </div>
       <div class="col-lg-3">
-        <div class="input-group">
+        <div class="input-group header_search">
+            <input type="text" class="form-control" placeholder="Search">
           <span class="input-group-btn">
-            <button class="btn btn-secondary" type="button">Go!</button>
+            <button class="btn btn-secondary src" type="button"><i class="fa fa-search fa-inverse" aria-hidden="true"></i></button>
           </span>
-          <input type="text" class="form-control" placeholder="Search for...">
+
         </div>
       </div>
     </div>
+  </div>
 
     <!--     navigation      -->
-
-    <div class="container">
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <div class="container">
 
      <ul class="nav nav-pills nav-justified">
 
@@ -55,9 +58,9 @@
       <li><a href="#">CONTACT</a></li>
 
     </ul>
-
+    </div>
   </div>
-
+</nav>
   <!--     buttons     -->
 
   <div class="margin"></div>
