--- a/index.html
+++ b/index.html
@@ -72,17 +72,14 @@
    <button class="btn btn-warning" type="button">WARNING</button>
    <button class="btn btn-danger" type="button">DANGER</button>
  </div>
-</div>
-
 
 <!--     inputs     -->
-
 
 <div class="container block">
   <h1>Inputs</h1>
    <div class="row">
-  <div class="col-lg-3"></div>
-    <div class="col-lg-2">
+  <div class="col-md-3"></div>
+    <div class="col-md-2">
       <div class="checkbox">
         <label>
           <input type="checkbox" value=""checked>
@@ -91,21 +88,20 @@
         </label>
       </div>
     </div>
-    <div class="col-lg-2">
+    <div class="col-md-2">
       <div class="radio">
         <label><input type="radio" name="optradio" checked>
           <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
           Radio active</label>
       </div>
     </div>
-    <div class="col-lg-2">
+    <div class="col-md-2">
       <label class="switch">
-        <input type="checkbox">
+        <input type="checkbox" checked>
         <span class="slider sw1 round"></span>
-              <span class="sw">Switcher ON</span>
-      </label>
+        </label>Switcher ON
     </div>
-    <div class="col-lg-3"></div>
+    <div class="col-md-3"></div>
       </div>
         <div class="row">
   <div class="col-lg-3"></div>
@@ -127,9 +123,7 @@
       <label class="switch">
         <input type="checkbox">
         <span class="slider sw2 round"></span>
-        <span class="sw">Switcher OFF</span>
-
-      </label>
+      </label>Switcher OFF
     </div>
     <div class="col-lg-3"></div>
       </div>
@@ -141,35 +135,47 @@
     <h1>Star rating</h1>
   </div>
 
-  <div class="container text-center">
-  <div class="row ">
-     </div>
-    <div class="row lead">
+  <div class="flex">
         <div id="stars" class="starrr">
-        Show rating
         </div>
-         </div>
-        <div class="row lead">
-             <div id="stars-existing" class="starrr" data-rating='5'>
-             Check rating
+        <div class="star">
+          <p>Show rating</p>
+        </div>
+       </div>
+    <div class="flex">
+    <div id="stars-existing" class="starrr" data-rating='5'>
+        </div>
+             <div class="star">
+               <p>Check rating</p>
              </div>
          </div>
-</div>
 
      <!--     Carousel     -->
 
   <div class="margin"></div>
     <div class="container">
     <h1>Carousel</h1>
-    <div class="owl-carousel owl-theme">
-  <div> Your Content </div>
-  <div> Your Content </div>
-  <div> Your Content </div>
-  <div> Your Content </div>
-  <div> Your Content </div>
-  <div> Your Content </div>
-  <div> Your Content </div>
-</div>
+    <div id="sync1" class="owl-carousel owl-theme">
+      <div class="item"><img  src="dist\img\AbominableChewbacca-SWT.png" alt=""><p>When I started, I weighed over 425 pounds. What matters is that you take the steps and focus on making one good choice at a time.</p>
+      </div>
+      <div class="item">
+        <h1>2</h1></div>
+      <div class="item">
+        <h1>3</h1></div>
+      <div class="item">
+        <h1>4</h1></div>
+    </div>
+
+    <div id="sync2" class="owl-carousel owl-theme">
+      <div class="item">
+        <h1>1</h1></div>
+      <div class="item">
+        <h1>2</h1></div>
+      <div class="item">
+        <h1>3</h1></div>
+      <div class="item">
+        <h1>4</h1></div>
+    </div>
   </div>
 
   <div id="googleMap" style="width:100%;height:400px;"></div>
@@ -257,14 +263,83 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
     <script src="distr/owl.carousel/dist/owl.carousel.min.js"></script>
 
     <script type="text/javascript">
-$('.owl-carousel').owlCarousel({
-        items:4,
-        loop:false,
-        center:true,
-        margin:10,
-        URLhashListener:true,
-        autoplayHoverPause:true,
-        startPosition: 'URLHash'
+    $(document).ready(function() {
+
+      var sync1 = $("#sync1");
+      var sync2 = $("#sync2");
+      var slidesPerPage = 4; //globaly define number of elements per page
+      var syncedSecondary = true;
+
+      sync1.owlCarousel({
+        items : 1,
+        slideSpeed : 2000,
+        nav: true,
+        dots: true,
+        loop: true,
+        responsiveRefreshRate : 200,
+        navText: ['<svg width="100%" height="100%" viewBox="0 0 11 20"><path style="fill:none;stroke-width: 1px;stroke: #000;" d="M9.554,1.001l-8.607,8.607l8.607,8.606"/></svg>','<svg width="100%" height="100%" viewBox="0 0 11 20" version="1.1"><path style="fill:none;stroke-width: 1px;stroke: #000;" d="M1.054,18.214l8.606,-8.606l-8.606,-8.607"/></svg>'],
+      }).on('changed.owl.carousel', syncPosition);
+
+      sync2
+        .on('initialized.owl.carousel', function () {
+          sync2.find(".owl-item").eq(0).addClass("current");
+        })
+        .owlCarousel({
+        items : slidesPerPage,
+        dots: true,
+        nav: true,
+        smartSpeed: 200,
+        slideSpeed : 500,
+        slideBy: slidesPerPage, //alternatively you can slide by 1, this way the active slide will stick to the first item in the second carousel
+        responsiveRefreshRate : 100
+      }).on('changed.owl.carousel', syncPosition2);
+
+      function syncPosition(el) {
+        //if you set loop to false, you have to restore this next line
+        //var current = el.item.index;
+
+        //if you disable loop you have to comment this block
+        var count = el.item.count-1;
+        var current = Math.round(el.item.index - (el.item.count/2) - .5);
+
+        if(current < 0) {
+          current = count;
+        }
+        if(current > count) {
+          current = 0;
+        }
+
+        //end block
+
+        sync2
+          .find(".owl-item")
+          .removeClass("current")
+          .eq(current)
+          .addClass("current");
+        var onscreen = sync2.find('.owl-item.active').length - 1;
+        var start = sync2.find('.owl-item.active').first().index();
+        var end = sync2.find('.owl-item.active').last().index();
+
+        if (current > end) {
+          sync2.data('owl.carousel').to(current, 100, true);
+        }
+        if (current < start) {
+          sync2.data('owl.carousel').to(current - onscreen, 100, true);
+        }
+      }
+
+      function syncPosition2(el) {
+        if(syncedSecondary) {
+          var number = el.item.index;
+          sync1.data('owl.carousel').to(number, 100, true);
+        }
+      }
+
+      sync2.on("click", ".owl-item", function(e){
+        e.preventDefault();
+        var number = $(this).index();
+        sync1.data('owl.carousel').to(number, 300, true);
+      });
     });
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGleK7X7vHnwyCI2H9QUuM5ybTgJ5d2bg&callback=myMap"></script>
