--- a/index.html
+++ b/index.html
@@ -152,30 +152,70 @@
 
      <!--     Carousel     -->
 
-  <div class="margin"></div>
     <div class="container">
-    <h1>Carousel</h1>
+        <h1>Carousel</h1>
+      <div class="row">
+        <div class="col-md-2">
+        </div>
+      <div class="col-md-8">
     <div id="sync1" class="owl-carousel owl-theme">
-      <div class="item"><img  src="dist\img\AbominableChewbacca-SWT.png" alt=""><p>When I started, I weighed over 425 pounds. What matters is that you take the steps and focus on making one good choice at a time.</p>
+      <div class="item"><img  src="dist\img\AbominableChewbacca-SWT.png" alt="">
+        <div class="slider_text">
+          <p>When I started, I weighed over 425 pounds. What matters is that you take the steps and focus on making one good choice at a time.</p>
+          <h3>CHEWBACCA</h3>
+          <p>July 2017</p>
+        </div>
       </div>
-      <div class="item">
-        <h1>2</h1></div>
-      <div class="item">
-        <h1>3</h1></div>
-      <div class="item">
-        <h1>4</h1></div>
+      <div class="item"><img  src="dist\img\maxresdefault-0658-CE15-B370.png" alt="">
+        <div class="slider_text">
+          <p>When I started, I weighed over 425 pounds. What matters is that you take the steps and focus on making one good choice at a time.</p>
+          <h3>CHEWBACCA</h3>
+          <p>July 2017</p>
+        </div>
+      </div>
+      <div class="item"><img  src="dist\img\Yoda_SWSB.png" alt="">
+        <div class="slider_text">
+          <p>When I started, I weighed over 425 pounds. What matters is that you take the steps and focus on making one good choice at a time.</p>
+          <h3>CHEWBACCA</h3>
+          <p>July 2017</p>
+        </div>
+      </div>
+      <div class="item"><img  src="dist\img\imageload.png" alt="">
+        <div class="slider_text">
+          <p>When I started, I weighed over 425 pounds. What matters is that you take the steps and focus on making one good choice at a time.</p>
+          <h3>CHEWBACCA</h3>
+          <p>July 2017</p>
+        </div>
+      </div>
     </div>
+    <div class="row">
+<div class="col-md-3"></div>
+<div class="col-md-6">
 
     <div id="sync2" class="owl-carousel owl-theme">
       <div class="item">
-        <h1>1</h1></div>
+        <div class="item"><img  src="dist\img\AbominableChewbacca-SWT_75.png" alt="">
+        </div>
+      </div>
       <div class="item">
-        <h1>2</h1></div>
+        <div class="item"><img  src="dist\img\maxresdefault-0658-CE15-B370.png" alt="">
+        </div>
+      </div>
       <div class="item">
-        <h1>3</h1></div>
+        <div class="item"><img  src="dist\img\Yoda_SWSB.png" alt="">
+        </div>
+      </div>
       <div class="item">
-        <h1>4</h1></div>
+        <div class="item"><img  src="dist\img\imageload.png" alt="">
+        </div>
+      </div>
     </div>
+</div>
+  <div class="col-md-2">
+  </div>
+    </div>
+    </div>
+  </div>
   </div>
 
   <div id="googleMap" style="width:100%;height:400px;"></div>
@@ -187,6 +227,97 @@ var mapProp= {
     zoom:15,
 };
 var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+var styledMapType = new google.maps.StyledMapType(
+  [
+      {
+          "featureType": "administrative",
+          "elementType": "labels.text.fill",
+          "stylers": [
+              {
+                  "color": "#444444"
+              }
+          ]
+      },
+      {
+          "featureType": "landscape",
+          "elementType": "all",
+          "stylers": [
+              {
+                  "color": "#f2f2f2"
+              }
+          ]
+      },
+      {
+          "featureType": "poi",
+          "elementType": "all",
+          "stylers": [
+              {
+                  "visibility": "off"
+              }
+          ]
+      },
+      {
+          "featureType": "road",
+          "elementType": "all",
+          "stylers": [
+              {
+                  "saturation": -100
+              },
+              {
+                  "lightness": 45
+              },
+              {
+                  "color": "#000000"
+              }
+          ]
+      },
+      {
+          "featureType": "road.highway",
+          "elementType": "all",
+          "stylers": [
+              {
+                  "visibility": "simplified"
+              },
+              {
+                  "color": "#000000"
+              }
+          ]
+      },
+      {
+          "featureType": "road.arterial",
+          "elementType": "labels.icon",
+          "stylers": [
+              {
+                  "visibility": "off"
+              }
+          ]
+      },
+      {
+          "featureType": "transit",
+          "elementType": "all",
+          "stylers": [
+              {
+                  "visibility": "off"
+              }
+          ]
+      },
+      {
+          "featureType": "water",
+          "elementType": "all",
+          "stylers": [
+              {
+                  "color": "#0049b0"
+              },
+              {
+                  "visibility": "on"
+              }
+          ]
+      }
+  ],
+              {name: 'Styled Map'});
+              map.mapTypes.set('styled_map', styledMapType);
+                     map.setMapTypeId('styled_map');
+
 }
 
 </script>
@@ -211,10 +342,10 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
           <ul>
             <li class="active"><a href="#"><span>Shop</span></a></li>
             <li><a href="#"></a><span>Browse By Holidays</span></li>
-            <li><a href="#"  ></a>spanBrowse By Brand</span></li>
-            <li><a href="#"  ></a>spanGift of the Month Clubs</span></li>
-            <li><a href="#"  ></a>spanCustomized Bottles</span></li>
-            <li><a href="#"  ></a>spanCorporate Gifts</span></li>
+            <li><a href="#"  ></a><span>Browse By Brand</span></li>
+            <li><a href="#"  ></a><span>Gift of the Month Clubs</span></li>
+            <li><a href="#"  ></a><span>Customized Bottles</span></li>
+            <li><a href="#"  ></a><span>Corporate Gifts</span></li>
 
           </ul>
         </nav>
@@ -244,11 +375,10 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
           </ul>
         </nav>
-      </div></div>
-
-
-      </div></div>
-
+      </div>
+    </div>
+      </div>
+    </div>
     </div>
   </div>
 </div>
@@ -259,89 +389,8 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="distr/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
-    <script src="src/js/star.js"></script>
-    <script src="distr/owl.carousel/dist/owl.carousel.min.js"></script>
-
-    <script type="text/javascript">
-    $(document).ready(function() {
-
-      var sync1 = $("#sync1");
-      var sync2 = $("#sync2");
-      var slidesPerPage = 4; //globaly define number of elements per page
-      var syncedSecondary = true;
-
-      sync1.owlCarousel({
-        items : 1,
-        slideSpeed : 2000,
-        nav: true,
-        dots: true,
-        loop: true,
-        responsiveRefreshRate : 200,
-        navText: ['<svg width="100%" height="100%" viewBox="0 0 11 20"><path style="fill:none;stroke-width: 1px;stroke: #000;" d="M9.554,1.001l-8.607,8.607l8.607,8.606"/></svg>','<svg width="100%" height="100%" viewBox="0 0 11 20" version="1.1"><path style="fill:none;stroke-width: 1px;stroke: #000;" d="M1.054,18.214l8.606,-8.606l-8.606,-8.607"/></svg>'],
-      }).on('changed.owl.carousel', syncPosition);
-
-      sync2
-        .on('initialized.owl.carousel', function () {
-          sync2.find(".owl-item").eq(0).addClass("current");
-        })
-        .owlCarousel({
-        items : slidesPerPage,
-        dots: true,
-        nav: true,
-        smartSpeed: 200,
-        slideSpeed : 500,
-        slideBy: slidesPerPage, //alternatively you can slide by 1, this way the active slide will stick to the first item in the second carousel
-        responsiveRefreshRate : 100
-      }).on('changed.owl.carousel', syncPosition2);
-
-      function syncPosition(el) {
-        //if you set loop to false, you have to restore this next line
-        //var current = el.item.index;
-
-        //if you disable loop you have to comment this block
-        var count = el.item.count-1;
-        var current = Math.round(el.item.index - (el.item.count/2) - .5);
-
-        if(current < 0) {
-          current = count;
-        }
-        if(current > count) {
-          current = 0;
-        }
-
-        //end block
-
-        sync2
-          .find(".owl-item")
-          .removeClass("current")
-          .eq(current)
-          .addClass("current");
-        var onscreen = sync2.find('.owl-item.active').length - 1;
-        var start = sync2.find('.owl-item.active').first().index();
-        var end = sync2.find('.owl-item.active').last().index();
-
-        if (current > end) {
-          sync2.data('owl.carousel').to(current, 100, true);
-        }
-        if (current < start) {
-          sync2.data('owl.carousel').to(current - onscreen, 100, true);
-        }
-      }
-
-      function syncPosition2(el) {
-        if(syncedSecondary) {
-          var number = el.item.index;
-          sync1.data('owl.carousel').to(number, 100, true);
-        }
-      }
-
-      sync2.on("click", ".owl-item", function(e){
-        e.preventDefault();
-        var number = $(this).index();
-        sync1.data('owl.carousel').to(number, 300, true);
-      });
-    });
-</script>
+<script src="src/js/star.js"></script>
+<script src="distr/owl.carousel/dist/owl.carousel.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGleK7X7vHnwyCI2H9QUuM5ybTgJ5d2bg&callback=myMap"></script>
 <script src="dist/js/main.js"></script>
   </body>
